Создан файл CSS и стилизован текст

--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Limpon</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div>
         <div>
                 <a href=""></a>
-                <ul>
+                <ul class="nav">
                     <li>Home</li>
                     <li>Features</li>
                     <li>Video</li>
                     <li>Screens</li>
                     <li>Pricing</li>
                     <li>team</li>
-                    <li>Free trail</li>
+                    <li><a href="">Free trail</a></li>
                 </ul>
         </div>
-            <h1>Best Software Landingpage </h1>
+            <h1>Best Software Landingpage</h1>
         <div>
             <a href="">get started now</a>
             <a href="">learn more</a>
@@ -32,41 +34,41 @@
             <a href=""></a>
             <a href=""></a>
     </div>
-    <div>  
+    <div class="page-grid">  
         <div>
             <h2><span>Features</span>Best Features Ever Seen</h2>
         </div>
-        <div>
+        <div class="grid">
             <div></div>
             <h3>Well Documented</h3>
             <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
             <a href="">Read More</a>
         </div>
-        <div>
+        <div class="grid">
             <div></div>
             <h3>Highly Customizeable</h3>
             <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
             <a href="">Read More</a>
         </div>
-        <div>
+        <div class="grid">
             <div></div>
             <h3>Mobile Friednly Design</h3>
             <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
             <a href="">Read More</a>
         </div>
-        <div>
+        <div class="grid">
             <div></div>
             <h3>Easy To Edit</h3>
             <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
             <a href="">Read More</a>
         </div>
-        <div>
+        <div class="grid">
             <div></div>
             <h3>Responsive Design</h3>
             <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
             <a href="">Read More</a>
         </div>
-        <div>
+        <div class="grid">
             <div></div>
             <h3>24/7 Online Support</h3>
             <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
@@ -74,10 +76,10 @@
         </div>
         <div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            <p><span>Rosalina Pong</span> - Founder, uithemes</p>
+            <p class="grid-down"><span>Rosalina Pong</span> - Founder, uithemes</p>
         </div>
     </div>
-    <div>
+    <div class="page-subscribe">
         <div>
             <div>
                 <h2><span>Subscribe</span>Signup For A Trail</h2>
@@ -93,7 +95,7 @@
             <div></div>
             <h2>Grab Your  Software With Amazing  Features</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-            <dl>
+            <dl class="grab-list">
                 <dt>01. Clean Design</dt>
                 <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</dd>
                 <dt>02. Easy To Customize</dt>
@@ -101,10 +103,10 @@
             </dl>
         </div>
     </div>
-    <div>
+    <div class="page-fun">
         <div>
             <h2><span>Fun Facts</span>Some Fun Facts About Dashboard</h2>
-            <ul>
+            <ul class="funs">
                 <li><span>53K</span> Layouts</li>
                 <li><span>10K</span> Projects</li>
                 <li><span>12K</span> Cup coffee</li>
@@ -117,7 +119,7 @@
             <div>
                 <h2>Meet With Future Landingpage</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-                <p>Available Now</p>
+                <p class="now">Available Now</p>
                 <ul>
                     <li><a href="" target="_blank"></a></li>
                     <li><a href="" target="_blank"></a></li>
@@ -138,13 +140,13 @@
         </div>
     </div>
     <div>     
-            <div>
-                <div></div>
-                <h2>Easy To Etid & Very Easily Control</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-                <button type="submit">Learn more</button>
-            </div>
-            <img src="img/screen3.png" alt="">
+        <div>
+            <div></div>
+            <h2>Easy To Etid & Very Easily Control</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+            <button type="submit">Learn more</button>
         </div>
+        <img src="img/screen3.png" alt="">
+    </div>
 </body>
 </html>
