--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Limpon</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-touch-icon-57x57.png" data-mce-href="/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-touch-icon-60x60.png" data-mce-href="/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png" data-mce-href="/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-touch-icon-76x76.png" data-mce-href="/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png" data-mce-href="/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-touch-icon-120x120.png" data-mce-href="/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-touch-icon-144x144.png" data-mce-href="/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-touch-icon-152x152.png" data-mce-href="/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png" data-mce-href="/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="img/favicon/favicon-32x32.png" sizes="32x32" data-mce-href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="img/favicon/android-chrome-192x192.png" sizes="192x192" data-mce-href="/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" href="img/favicon/favicon-96x96.png" sizes="96x96" data-mce-href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" href="img/favicon/favicon-16x16.png" sizes="16x16" data-mce-href="/favicon-16x16.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>
+    <div class="page-header">
         <div>
                 <a href=""></a>
                 <ul class="nav">
@@ -28,7 +42,7 @@
             <a href="">learn more</a>
         </div>
     </div>
-    <div>
+    <div class="page-co">
             <a href=""></a>
             <a href=""></a>
             <a href=""></a>
@@ -90,7 +104,7 @@
             <img src="img/robot.png" alt="">
         </div>
     </div>
-    <div>
+    <div class="page-grab">
         <div>
             <div></div>
             <h2>Grab Your  Software With Amazing  Features</h2>
@@ -114,7 +128,7 @@
             </ul>
         </div>
     </div>
-    <div>
+    <div class="page-video">
         <div>
             <div>
                 <h2>Meet With Future Landingpage</h2>
@@ -128,7 +142,7 @@
             <img src="img/player.png" alt="">
         </div>
     </div>
-    <div>
+    <div class="page-state">
         <div>
             <img src="img/screen2.png" alt="">
         </div>
@@ -139,7 +153,7 @@
             <button type="submit">Get started now</button>
         </div>
     </div>
-    <div>     
+    <div class="page-learn">     
         <div>
             <div></div>
             <h2>Easy To Etid & Very Easily Control</h2>
@@ -147,6 +161,108 @@
             <button type="submit">Learn more</button>
         </div>
         <img src="img/screen3.png" alt="">
+    </div>
+    <div class="page-screen">
+        <div>
+            <h2><span>screen preview</span>Screenshot With Details</h2>
+        </div>
+    </div>
+    <div class="page-client">
+        <h2><span>testimonials</span>Our Happy Clients</h2>
+        <div class="client">
+            <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+            <h3>Rolin B. Mirano<span>ceo, uihub</span></h3>
+        </div>
+        <div class="client">
+                <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+                <h3>Rolin B. Mirano<span>ceo, uihub</span></h3>
+        </div>
+        <div class="client">
+            <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+            <h3>Rolin B. Mirano<span>ceo, uihub</span></h3>
+        </div>
+    </div>
+    <div class="page-price">
+        <h2><span>our plans</span>Pricing Plans</h2>
+        <div>
+            <h3>Free</h3>
+            <p><strong>Starter</strong></p>
+            <ul>
+                <li>Unlimited users Active</li>
+                <li>1 GB Bandwidth Speed</li>
+                <li>256 MB Memory Card</li>
+                <li>Free Domain Name</li>
+                <li>Free Hosting Name</li>
+                <li>24x7 Online Support</li>
+            </ul>
+            <a href="">Choose plan</a>
+        </div>
+        <div class="box-active">
+            <h3><span>$</span>90<span class="mo">/mo</span></h3>
+            <p><strong>Starter</strong></p>
+            <ul>
+                <li>Unlimited users Active</li>
+                <li>1 GB Bandwidth Speed</li>
+                <li>256 MB Memory Card</li>
+                <li>Free Domain Name</li>
+                <li>Free Hosting Name</li>
+                <li>24x7 Online Support</li>
+            </ul>
+            <a href="">Choose plan</a>
+        </div>
+        <div>
+            <h3><span>$</span>350<span class="mo">/mo</span></h3>
+            <p><strong>Starter</strong></p>
+            <ul>
+                <li>Unlimited users Active</li>
+                <li>1 GB Bandwidth Speed</li>
+                <li>256 MB Memory Card</li>
+                <li>Free Domain Name</li>
+                <li>Free Hosting Name</li>
+                <li>24x7 Online Support</li>
+            </ul>
+            <a href="">Choose plan</a>
+        </div>
+    </div>
+    <div class="page-team">
+        <h2><span>angels</span>Our Team</h2>
+        <div>
+            <p>founder</p>
+            <p>Ricardo T. Obrien</p>
+        </div>
+        <div>
+            <p>ceo</p>
+            <p>Alberto Del Rio</p>
+        </div>
+        <div>
+            <p>disigner</p>
+            <p>Thomas Alva Adison</p>
+        </div>
+    </div>
+    <div class="page-form">
+        <h2> Start Your Free Trail No Need Credit Card.</h2>
+        <div>
+            <form action="">
+                <input type="text" placeholder="Enter your name here">
+                <input type="email" placeholder="Enter your email here">
+                <textarea name="textMessage" id="">Enter your message here</textarea>
+                <button type="submit">Submit now</button>
+            </form>
+        </div>
+    </div>
+    <div class="footer">
+        <div>
+            <p>Made With Love & Copyright By - <a href="" target="_blank">limpon</a></p>
+        </div>
+        <div>
+            <ul>
+                <li><a href="" target="_blank"></a></li>
+                <li><a href="" target="_blank"></a></li>
+                <li><a href="" target="_blank"></a></li>
+                <li><a href="" target="_blank"></a></li>
+                <li><a href="" target="_blank"></a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
