--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                     <li>Screens</li>
                     <li>Pricing</li>
                     <li>team</li>
-                    <li><a href="">Free trail</a></li>
+                    <li><a href="" class="btn-free">Free trail</a></li>
                 </ul>
         </div>
             <h1>Best Software Landingpage</h1>
         <div>
-            <a href="">get started now</a>
-            <a href="">learn more</a>
+            <a href="" class="btn-primary">get started now</a>
+            <a href="" class="btn-secondary">learn more</a>
         </div>
     </div>
     <div class="page-co">
@@ -99,7 +99,7 @@
                 <h2><span>Subscribe</span>Signup For A Trail</h2>
                 <p>Create your free account now & get 30 days free trail No credit card required</p>
                 <input type="email" placeholder="Enter your email address">
-                <button type="submit">Subscribe</button>
+                <button type="submit" class="btn-primary">Subscribe</button>
             </div>
             <img src="img/robot.png" alt="">
         </div>
@@ -150,7 +150,7 @@
             <div></div>
             <h2>Limpon Is Suitable For Anytype LandingPage</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-            <button type="submit">Get started now</button>
+            <button type="submit" class="btn-primary">Get started now</button>
         </div>
     </div>
     <div class="page-learn">     
@@ -158,7 +158,7 @@
             <div></div>
             <h2>Easy To Etid & Very Easily Control</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-            <button type="submit">Learn more</button>
+            <button type="submit" class="btn-primary">Learn more</button>
         </div>
         <img src="img/screen3.png" alt="">
     </div>
@@ -195,7 +195,7 @@
                 <li>Free Hosting Name</li>
                 <li>24x7 Online Support</li>
             </ul>
-            <a href="">Choose plan</a>
+            <a href="" class="btn-info">Choose plan</a>
         </div>
         <div class="box-active">
             <h3><span>$</span>90<span class="mo">/mo</span></h3>
@@ -208,7 +208,7 @@
                 <li>Free Hosting Name</li>
                 <li>24x7 Online Support</li>
             </ul>
-            <a href="">Choose plan</a>
+            <a href="" class="btn-primary">Choose plan</a>
         </div>
         <div>
             <h3><span>$</span>350<span class="mo">/mo</span></h3>
@@ -221,7 +221,7 @@
                 <li>Free Hosting Name</li>
                 <li>24x7 Online Support</li>
             </ul>
-            <a href="">Choose plan</a>
+            <a href="" class="btn-info">Choose plan</a>
         </div>
     </div>
     <div class="page-team">
@@ -246,7 +246,7 @@
                 <input type="text" placeholder="Enter your name here">
                 <input type="email" placeholder="Enter your email here">
                 <textarea name="textMessage" id="">Enter your message here</textarea>
-                <button type="submit">Submit now</button>
+                <button type="submit" class="btn-primary">Submit now</button>
             </form>
         </div>
     </div>
