--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
         <div>
                 <a href=""></a>
                 <ul class="nav">
-                    <li>Home</li>
-                    <li>Features</li>
-                    <li>Video</li>
-                    <li>Screens</li>
-                    <li>Pricing</li>
-                    <li>team</li>
+                    <li><a href="" class="nav-item">Home</a></li>
+                    <li><a href="" class="nav-item">Features</a></li>
+                    <li><a href="" class="nav-item">Video</a></li>
+                    <li><a href="" class="nav-item">Screens</a></li>
+                    <li><a href="" class="nav-item">Pricing</a></li>
+                    <li><a href="" class="nav-item">team</a></li>
                     <li><a href="" class="btn-free">Free trail</a></li>
                 </ul>
         </div>
+
             <h1>Best Software Landingpage</h1>
         <div>
             <a href="" class="btn-primary">get started now</a>
@@ -49,52 +50,54 @@
             <a href=""></a>
     </div>
     <div class="page-grid">  
-        <div>
-            <h2><span>Features</span>Best Features Ever Seen</h2>
-        </div>
-        <div class="grid">
-            <div></div>
-            <h3>Well Documented</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
-            <a href="">Read More</a>
-        </div>
-        <div class="grid">
-            <div></div>
-            <h3>Highly Customizeable</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
-            <a href="">Read More</a>
-        </div>
-        <div class="grid">
-            <div></div>
-            <h3>Mobile Friednly Design</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
-            <a href="">Read More</a>
-        </div>
-        <div class="grid">
-            <div></div>
-            <h3>Easy To Edit</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
-            <a href="">Read More</a>
-        </div>
-        <div class="grid">
-            <div></div>
-            <h3>Responsive Design</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
-            <a href="">Read More</a>
-        </div>
-        <div class="grid">
-            <div></div>
-            <h3>24/7 Online Support</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
-            <a href="">Read More</a>
-        </div>
-        <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            <p class="grid-down"><span>Rosalina Pong</span> - Founder, uithemes</p>
+        <div class="wrap">
+            <div>
+                <h2><span>Features</span>Best Features Ever Seen</h2>
+            </div>
+            <div class="grid">
+                <div></div>
+                <h3>Well Documented</h3>
+                <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+                <a href="">Read More</a>
+            </div>
+            <div class="grid">
+                <div></div>
+                <h3>Highly Customizeable</h3>
+                <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+                <a href="">Read More</a>
+            </div>
+            <div class="grid">
+                <div></div>
+                <h3>Mobile Friednly Design</h3>
+                <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+                <a href="">Read More</a>
+            </div>
+            <div class="grid">
+                <div></div>
+                <h3>Easy To Edit</h3>
+                <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+                <a href="">Read More</a>
+            </div>
+            <div class="grid">
+                <div></div>
+                <h3>Responsive Design</h3>
+                <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+                <a href="">Read More</a>
+            </div>
+            <div class="grid">
+                <div></div>
+                <h3>24/7 Online Support</h3>
+                <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
+                <a href="">Read More</a>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <p class="grid-down"><span>Rosalina Pong</span> - Founder, uithemes</p>
+            </div>
         </div>
     </div>
     <div class="page-subscribe">
-        <div>
+        <div class="wrap">
             <div>
                 <h2><span>Subscribe</span>Signup For A Trail</h2>
                 <p>Create your free account now & get 30 days free trail No credit card required</p>
@@ -105,7 +108,7 @@
         </div>
     </div>
     <div class="page-grab">
-        <div>
+        <div class="wrap">
             <div></div>
             <h2>Grab Your  Software With Amazing  Features</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
@@ -118,18 +121,18 @@
         </div>
     </div>
     <div class="page-fun">
-        <div>
-            <h2><span>Fun Facts</span>Some Fun Facts About Dashboard</h2>
+        <div class="wrap">
+            <h2 class="title-fun"><span>Fun Facts</span>Some Fun Facts About Dashboard</h2>
             <ul class="funs">
-                <li><span>53K</span> Layouts</li>
-                <li><span>10K</span> Projects</li>
-                <li><span>12K</span> Cup coffee</li>
-                <li><span>120</span> Awards</li>
+                <li><span>53K</span>Layouts</li>
+                <li><span>10K</span>Projects</li>
+                <li><span>12K</span>Cup coffee</li>
+                <li><span>120</span>Awards</li>
             </ul>
         </div>
     </div>
     <div class="page-video">
-        <div>
+        <div class="wrap">
             <div>
                 <h2>Meet With Future Landingpage</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
@@ -143,125 +146,145 @@
         </div>
     </div>
     <div class="page-state">
-        <div>
-            <img src="img/screen2.png" alt="">
-        </div>
-        <div>
-            <div></div>
-            <h2>Limpon Is Suitable For Anytype LandingPage</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-            <button type="submit" class="btn-primary">Get started now</button>
+        <div class="wrap">
+            <div>
+                <img src="img/screen2.png" alt="">
+            </div>
+            <div>
+                <div></div>
+                <h2>Limpon Is Suitable For Anytype LandingPage</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                <button type="submit" class="btn-primary">Get started now</button>
+            </div>
         </div>
     </div>
-    <div class="page-learn">     
-        <div>
-            <div></div>
-            <h2>Easy To Etid & Very Easily Control</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-            <button type="submit" class="btn-primary">Learn more</button>
-        </div>
-        <img src="img/screen3.png" alt="">
+    <div class="page-learn"> 
+        <div class="wrap">  
+            <div>
+                <div></div>
+                <h2>Easy To Etid & Very Easily Control</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                <button type="submit" class="btn-primary">Learn more</button>
+            </div>
+            <img src="img/screen3.png" alt="">
+        </div>  
     </div>
     <div class="page-screen">
         <div>
-            <h2><span>screen preview</span>Screenshot With Details</h2>
+            <h2 class="title-screen"><span>screen preview</span>Screenshot With Details</h2>
+        </div>
+        <div class ="img-screen">
+            <img src="img/screen4.png" alt="">
         </div>
     </div>
     <div class="page-client">
-        <h2><span>testimonials</span>Our Happy Clients</h2>
-        <div class="client">
-            <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
-            <h3>Rolin B. Mirano<span>ceo, uihub</span></h3>
-        </div>
-        <div class="client">
+        <div class="wrap">
+            <h2><span>testimonials</span>Our Happy Clients</h2>
+            <div class="client">
                 <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
                 <h3>Rolin B. Mirano<span>ceo, uihub</span></h3>
-        </div>
-        <div class="client">
-            <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
-            <h3>Rolin B. Mirano<span>ceo, uihub</span></h3>
+            </div>
+            <div class="client">
+                    <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+                    <h3>Rolin B. Mirano<span>ceo, uihub</span></h3>
+            </div>
+            <div class="client">
+                <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+                <h3>Rolin B. Mirano<span>ceo, uihub</span></h3>
+            </div>
         </div>
     </div>
     <div class="page-price">
-        <h2><span>our plans</span>Pricing Plans</h2>
-        <div>
-            <h3>Free</h3>
-            <p><strong>Starter</strong></p>
-            <ul>
-                <li>Unlimited users Active</li>
-                <li>1 GB Bandwidth Speed</li>
-                <li>256 MB Memory Card</li>
-                <li>Free Domain Name</li>
-                <li>Free Hosting Name</li>
-                <li>24x7 Online Support</li>
-            </ul>
-            <a href="" class="btn-info">Choose plan</a>
-        </div>
-        <div class="box-active">
-            <h3><span>$</span>90<span class="mo">/mo</span></h3>
-            <p><strong>Starter</strong></p>
-            <ul>
-                <li>Unlimited users Active</li>
-                <li>1 GB Bandwidth Speed</li>
-                <li>256 MB Memory Card</li>
-                <li>Free Domain Name</li>
-                <li>Free Hosting Name</li>
-                <li>24x7 Online Support</li>
-            </ul>
-            <a href="" class="btn-primary">Choose plan</a>
-        </div>
-        <div>
-            <h3><span>$</span>350<span class="mo">/mo</span></h3>
-            <p><strong>Starter</strong></p>
-            <ul>
-                <li>Unlimited users Active</li>
-                <li>1 GB Bandwidth Speed</li>
-                <li>256 MB Memory Card</li>
-                <li>Free Domain Name</li>
-                <li>Free Hosting Name</li>
-                <li>24x7 Online Support</li>
-            </ul>
-            <a href="" class="btn-info">Choose plan</a>
+        <div class="wrap">
+            <h2 class="title-price"><span>our plans</span>Pricing Plans</h2>
+            <div class="price-item">
+                <div class="price-item-pas">
+                    <h3>Free</h3>
+                    <p><strong>STARTER</strong></p>
+                    <ul>
+                        <li>Unlimited users Active</li>
+                        <li>1 GB Bandwidth Speed</li>
+                        <li>256 MB Memory Card</li>
+                        <li>Free Domain Name</li>
+                        <li>Free Hosting Name</li>
+                        <li>24x7 Online Support</li>
+                    </ul>
+                    <a href="" class="btn-info">Choose plan</a>
+                </div>
+                <div class="box-active">
+                    <h3><span>$</span>90<u>/mo</u></h3>
+                    
+                    <p><strong>STARTER</strong></p>
+                    <ul>
+                        <li>Unlimited users Active</li>
+                        <li>1 GB Bandwidth Speed</li>
+                        <li>256 MB Memory Card</li>
+                        <li>Free Domain Name</li>
+                        <li>Free Hosting Name</li>
+                        <li>24x7 Online Support</li>
+                    </ul>
+                    <a href="" class="btn-price">Choose plan</a>
+                </div>
+                <div class="price-item-pas">
+                    <h3><span>$</span>350<u>/mo</u></h3>
+                    <p><strong>STARTER</strong></p>
+                    <ul>
+                        <li>Unlimited users Active</li>
+                        <li>1 GB Bandwidth Speed</li>
+                        <li>256 MB Memory Card</li>
+                        <li>Free Domain Name</li>
+                        <li>Free Hosting Name</li>
+                        <li>24x7 Online Support</li>
+                    </ul>
+                    <a href="" class="btn-info">Choose plan</a>
+                </div>
+            </div>
         </div>
     </div>
     <div class="page-team">
-        <h2><span>angels</span>Our Team</h2>
-        <div>
-            <p>founder</p>
-            <p>Ricardo T. Obrien</p>
-        </div>
-        <div>
-            <p>ceo</p>
-            <p>Alberto Del Rio</p>
-        </div>
-        <div>
-            <p>disigner</p>
-            <p>Thomas Alva Adison</p>
+        <div class="wrap">
+            <h2><span>angels</span>Our Team</h2>
+            <div>
+                <p>founder</p>
+                <p>Ricardo T. Obrien</p>
+            </div>
+            <div>
+                <p>ceo</p>
+                <p>Alberto Del Rio</p>
+            </div>
+            <div>
+                <p>disigner</p>
+                <p>Thomas Alva Adison</p>
+            </div>
         </div>
     </div>
     <div class="page-form">
-        <h2> Start Your Free Trail No Need Credit Card.</h2>
-        <div>
-            <form action="">
-                <input type="text" placeholder="Enter your name here">
-                <input type="email" placeholder="Enter your email here">
-                <textarea name="textMessage" id="">Enter your message here</textarea>
-                <button type="submit" class="btn-primary">Submit now</button>
-            </form>
+        <div class="wrap">
+            <h2> Start Your Free Trail No Need Credit Card.</h2>
+            <div>
+                <form action="">
+                    <input type="text" placeholder="Enter your name here">
+                    <input type="email" placeholder="Enter your email here">
+                    <textarea name="textMessage" id="">Enter your message here</textarea>
+                    <button type="submit" class="btn-primary">Submit now</button>
+                </form>
+            </div>
         </div>
     </div>
     <div class="footer">
-        <div>
-            <p>Made With Love & Copyright By - <a href="" target="_blank">limpon</a></p>
-        </div>
-        <div>
-            <ul>
-                <li><a href="" target="_blank"></a></li>
-                <li><a href="" target="_blank"></a></li>
-                <li><a href="" target="_blank"></a></li>
-                <li><a href="" target="_blank"></a></li>
-                <li><a href="" target="_blank"></a></li>
-            </ul>
+        <div class="wrap">
+            <div>
+                <p>Made With Love & Copyright By - <a href="" target="_blank">limpon</a></p>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="" target="_blank"></a></li>
+                    <li><a href="" target="_blank"></a></li>
+                    <li><a href="" target="_blank"></a></li>
+                    <li><a href="" target="_blank"></a></li>
+                    <li><a href="" target="_blank"></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
