--- a/index.html
+++ b/index.html
@@ -24,30 +24,34 @@
 </head>
 <body>
     <div class="page-header">
-        <div>
-                <a href=""></a>
-                <ul class="nav">
-                    <li><a href="" class="nav-item">Home</a></li>
-                    <li><a href="" class="nav-item">Features</a></li>
-                    <li><a href="" class="nav-item">Video</a></li>
-                    <li><a href="" class="nav-item">Screens</a></li>
-                    <li><a href="" class="nav-item">Pricing</a></li>
-                    <li><a href="" class="nav-item">team</a></li>
-                    <li><a href="" class="btn-free">Free trail</a></li>
-                </ul>
+        <div class="wrap box-header">
+            <a href="" class="logo"></a>
+            <ul class="nav">
+                <li><a href="" class="nav-item">Home</a></li>
+                <li><a href="" class="nav-item">Features</a></li>
+                <li><a href="" class="nav-item">Video</a></li>
+                <li><a href="" class="nav-item">Screens</a></li>
+                <li><a href="" class="nav-item">Pricing</a></li>
+                <li><a href="" class="nav-item">team</a></li>
+                <li><a href="" class="btn-free">Free trail</a></li>
+            </ul>
         </div>
-
-            <h1>Best Software Landingpage</h1>
-        <div>
-            <a href="" class="btn-primary">get started now</a>
-            <a href="" class="btn-secondary">learn more</a>
+        <div class="wrap">
+                <h1>Best Software Landingpage</h1>
+            <div>
+                <a href="" class="btn-primary">get started now</a>
+                <a href="" class="btn-secondary">learn more</a>
+            </div>
         </div>
+        <div class="screen-header"></div>
     </div>
     <div class="page-co">
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+        <div class="wrap company">
+            <a href="" class="co-one"></a>
+            <a href="" class="co-two"></a>
+            <a href="" class="co-three"></a>
+            <a href="" class="co-four"></a>
+        </div>
     </div>
     <div class="page-grid">  
         <div class="wrap">
@@ -97,14 +101,16 @@
         </div>
     </div>
     <div class="page-subscribe">
-        <div class="wrap">
-            <div>
-                <h2><span>Subscribe</span>Signup For A Trail</h2>
+        <div class="wrap box-sub">
+            <div class="content-sub">
+                <h2 class="title-sub"><span>Subscribe</span>Signup For A Trail</h2>
                 <p>Create your free account now & get 30 days free trail No credit card required</p>
-                <input type="email" placeholder="Enter your email address">
-                <button type="submit" class="btn-primary">Subscribe</button>
+                <input type="email" placeholder="Enter your email address" class="text-email">
+                <button type="submit" class="btn-primary btn-email">Subscribe</button>
             </div>
+            <div class="img-robot">
             <img src="img/robot.png" alt="">
+            </div>
         </div>
     </div>
     <div class="page-grab">
