--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -114,7 +114,7 @@
     <div class="page-software">
         <div class="wrap page-software-flex">
             <div>
-                <div class="page-software-icon"></div>
+                <div class="setting-icon"></div>
                 <h2 class="title-sofware">Grab Your  Software With Amazing  Features</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
                 <dl class="page-software-list">
@@ -148,40 +148,42 @@
     </div>
     <div class="page-video">
         <div class="wrap">
-            <div>
-                <h2>Meet With Future Landingpage</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+            <div class="page-video-content">
+                <h2 class="title-video">Meet With Future&nbsp;Landingpage</h2>
+                <p class="video-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
                 <p class="now">Available Now</p>
-                <ul>
-                    <li><a href="" target="_blank"></a></li>
-                    <li><a href="" target="_blank"></a></li>
+                <ul class="page-video-list">
+                    <li><a class="page-video-and" href="" target="_blank"></a></li>
+                    <li><a class="page-video-ios" href="" target="_blank"></a></li>
                 </ul>
             </div>
-            <img src="img/player.png" alt="">
+            <a class="video-app" href=""><img src="img/player.png" alt=""></a>
         </div>
     </div>
     <div class="page-state">
-        <div class="wrap">
+        <div class="wrap flex-state">
             <div>
                 <img src="img/screen2.png" alt="">
             </div>
-            <div>
-                <div></div>
-                <h2>Limpon Is Suitable For Anytype LandingPage</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+            <div class="state-content">
+                <div class="setting-icon"></div>
+                <h2 class="title-state">Limpon Is Suitable For Anytype LandingPage</h2>
+                <p class="state-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
                 <button type="submit" class="btn-primary">Get started now</button>
             </div>
         </div>
     </div>
     <div class="page-learn"> 
-        <div class="wrap">  
-            <div>
-                <div></div>
-                <h2>Easy To Etid & Very Easily Control</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-                <button type="submit" class="btn-primary">Learn more</button>
+        <div class="wrap flex-learn">  
+            <div class="learn-content">
+                <div class="setting-icon"></div>
+                <h2 class="title-learn">Easy To Etid & Very Easily Control</h2>
+                <p class="learn-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                <button type="submit" class="btn-primary btn-learn">Learn more</button>
             </div>
-            <img src="img/screen3.png" alt="">
+            <div>
+                <img src="img/screen3.png" alt="">
+            </div>
         </div>  
     </div>
     <div class="page-screen">
@@ -277,10 +279,10 @@
         <div class="wrap">
             <h2> Start Your Free Trail No Need Credit Card.</h2>
             <div>
-                <form action="">
+                <form action="sendLetter">
                     <input type="text" placeholder="Enter your name here">
                     <input type="email" placeholder="Enter your email here">
-                    <textarea name="textMessage" id="">Enter your message here</textarea>
+                    <textarea name="textMessage" id="message">Enter your message here</textarea>
                     <button type="submit" class="btn-primary">Submit now</button>
                 </form>
             </div>
