--- a/index.html
+++ b/index.html
@@ -196,18 +196,38 @@
     </div>
     <div class="page-client">
         <div class="wrap">
-            <h2><span>testimonials</span>Our Happy Clients</h2>
+            <h2 class="title-client"><span>testimonials</span>Our Happy Clients</h2>
             <div class="client">
-                <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
-                <h3>Rolin B. Mirano<span>ceo, uihub</span></h3>
-            </div>
-            <div class="client">
-                    <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
-                    <h3>Rolin B. Mirano<span>ceo, uihub</span></h3>
-            </div>
-            <div class="client">
-                <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
-                <h3>Rolin B. Mirano<span>ceo, uihub</span></h3>
+                <div class="client-item">
+                    <p class="client-text">It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+                    <div class="client-info">
+                        <img src="img/avatar.png" alt="">
+                        <div>
+                            <h3 class="name">Rolin B. Mirano</h3>
+                            <p class="position">ceo, uihub</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client-item">
+                    <p class="client-text">It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+                    <div class="client-info">
+                        <img src="img/avatar.png" alt="">
+                        <div>
+                            <h3 class="name">Rolin B. Mirano</h3>
+                            <p class="position">ceo, uihub</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="client-item">
+                    <p class="client-text">It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+                    <div class="client-info">
+                        <img src="img/avatar.png" alt="">
+                        <div>
+                            <h3 class="name">Rolin B. Mirano</h3>
+                            <p class="position">ceo, uihub</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -260,18 +280,26 @@
     </div>
     <div class="page-team">
         <div class="wrap">
-            <h2><span>angels</span>Our Team</h2>
-            <div>
-                <p>founder</p>
-                <p>Ricardo T. Obrien</p>
-            </div>
-            <div>
-                <p>ceo</p>
-                <p>Alberto Del Rio</p>
-            </div>
-            <div>
-                <p>disigner</p>
-                <p>Thomas Alva Adison</p>
+            <h2 class="title-team"><span>angels</span>Our Team</h2>
+            <div class="box-team">
+                <div class="box-team-item">
+                    <img class="avatar" src="img/photo1.png" alt="">
+                    <p class="position">founder</p>
+                    <p class="name">Ricardo T. Obrien</p>
+                    <button type="button" class="btn-more"></button>
+                </div>
+                <div class="box-team-item">
+                    <img class="avatar" src="img/photo2.png" alt="">
+                    <p class="position">ceo</p>
+                    <p class="name">Alberto Del Rio</p>
+                    <button type="button" class="btn-more"></button>
+                </div>
+                <div class="box-team-item">
+                    <img class="avatar" src="img/photo3.png" alt="">
+                    <p class="position">disigner</p>
+                    <p class="name">Thomas Alva Adison</p>
+                    <button type="button" class="btn-more"></button>
+                </div>
             </div>
         </div>
     </div>
@@ -304,5 +332,6 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </body>
 </html>
