--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         <div class="screen-software"></div>
     </div>
     <div class="page-fun">
+
         <div class="wrap">
             <h2 class="title-fun"><span>Fun Facts</span>Some Fun Facts About Dashboard</h2>
             <ul class="funs">
@@ -150,6 +151,9 @@
     </div>
     <div class="page-video">
         <div class="wrap">
+            <div class="intro">
+                <p>Intro</p>
+            </div>
             <div class="page-video-content">
                 <h2 class="title-video">Meet With Future&nbsp;Landingpage</h2>
                 <p class="video-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
