css form footer

--- a/index.html
+++ b/index.html
@@ -328,30 +328,33 @@
         </div>
     </div>
     <div class="page-form">
-        <div class="wrap">
-            <h2> Start Your Free Trail No Need Credit Card.</h2>
-            <div>
-                <form action="sendLetter">
-                    <input type="text" placeholder="Enter your name here">
-                    <input type="email" placeholder="Enter your email here">
-                    <textarea name="textMessage" id="message">Enter your message here</textarea>
-                    <button type="submit" class="btn-primary">Submit now</button>
-                </form>
+        <div class="wrap form-flex">
+            <img src="img/screen5.png" alt="">
+            <div class="form-content">
+                <h2 class="title-form"> Start Your Free Trail No Need Credit Card.</h2>
+                <div>
+                    <form action="sendLetter" class="contact-form">
+                        <div class="contact-form-item contact-form-name"><input type="text" placeholder="Enter your name here"></div>
+                        <div class="contact-form-item contact-form-email"><input type="email" placeholder="Enter your email here"></div>
+                        <div class="contact-form-item contact-form-text"><textarea name="textMessage" id="message" placeholder="Enter your email here"></textarea></div>
+                        <button type="submit" class="btn-primary btn-form">Submit now</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
     <div class="footer">
-        <div class="wrap">
-            <div>
+        <div class="wrap footer-flex">
+            <div class="footer-text">
                 <p>Made With Love & Copyright By - <a href="" target="_blank">limpon</a></p>
             </div>
-            <div>
+            <div class="footer-icons">
                 <ul>
-                    <li><a href="" target="_blank"></a></li>
-                    <li><a href="" target="_blank"></a></li>
-                    <li><a href="" target="_blank"></a></li>
-                    <li><a href="" target="_blank"></a></li>
-                    <li><a href="" target="_blank"></a></li>
+                    <li><a href="" target="_blank" class="footer-fb"></a></li>
+                    <li><a href="" target="_blank" class="footer-tw"></a></li>
+                    <li><a href="" target="_blank" class="footer-be"></a></li>
+                    <li><a href="" target="_blank" class="footer-pr"></a></li>
+                    <li><a href="" target="_blank" class="footer-ff"></a></li>
                 </ul>
             </div>
         </div>
